hero endpoints were added
